--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
         "finance": "^0.3.0",
         "quantlib": "^0.1.2",
         "trading-signals": "^5.0.5",
-        "alphavantage": "^2.0.0",
+        "alphavantage": "^1.2.0",
         "yahoo-finance2": "^2.11.3",
         "coinmarketcap-api": "^3.1.1",
         "coingecko-api": "^1.0.10",
@@ -107,6 +107,7 @@
         "newsapi": "^2.4.1",
         "polygon": "^2.0.1",
         "finnhub": "^1.2.18",
+        "alpha-vantage": "^1.0.1",
         "twelve-data": "^1.4.14",
         "tradingview-charting-library": "^26.002.0",
         "ccxt": "^4.2.25",
@@ -167,7 +168,7 @@
         "clinic": "^13.0.0",
         "0x": "^5.5.0",
         "node-clinic": "^13.0.0"
-    }
+    },
     "devDependencies": {
         "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
