--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,36 +1,39 @@
-{
-  "$schema": "https://railway.com/railway.schema.json",
-  "build": {
-    "builder": "NIXPACKS",
-    "nixpacksPlan": {
-      "phases": {
-        "install": {
-          "cmds": ["npm install --legacy-peer-deps --no-audit --no-fund"]
-        }
-      }
-    },
-    "env": {
-      "NODE_ENV": "production",
-      "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true",
-      "PUPPETEER_EXECUTABLE_PATH": "/usr/bin/chromium"
-    },
-    "watchIgnore": [
-      "temp/**",
-      "logs/**",
-      "coverage/**",
-      "*.log"
-    ]
-  },
-  "deploy": {
-    "startCommand": "node index.js",
-    "restartPolicyType": "ON_FAILURE",
-    "healthcheckPath": "/health",
-    "healthcheckTimeout": 300
-  },
-  "regions": ["us-west1"],
-  "plugins": [],
-  "experimental": {
-    "showServiceLogs": true,
-    "incrementalBuilds": true
-  }
-}
+# nixpacks.toml - Railway configuration for Ray Dalio system
+[phases.setup]
+nixPkgs = [
+    "nodejs-18_x",
+    "npm",
+    "python3",
+    "pkg-config",
+    "cairo",
+    "pango",
+    "libpng",
+    "libjpeg",
+    "giflib",
+    "librsvg",
+    "pixman",
+    "chromium",
+    "xvfb-run",
+    "gcc",
+    "libuuid"
+]
+
+[phases.install]
+cmds = [
+    "npm install --legacy-peer-deps --no-audit --no-fund",
+    "mkdir -p temp logs"
+]
+
+[phases.build]
+cmds = [
+    "echo 'IMPERIUM VAULT System - Ray Dalio AI + Cambodia Lending Fund'",
+    "echo 'Build completed successfully'"
+]
+
+[start]
+cmd = "node index.js"
+
+[variables]
+NODE_ENV = "production"
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "true"
+PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium"
