--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,39 +1,7 @@
-# nixpacks.toml - Railway configuration for Ray Dalio system
-[phases.setup]
-nixPkgs = [
-    "nodejs-18_x",
-    "npm",
-    "python3",
-    "pkg-config",
-    "cairo",
-    "pango",
-    "libpng",
-    "libjpeg",
-    "giflib",
-    "librsvg",
-    "pixman",
-    "chromium",
-    "xvfb-run",
-    "gcc",
-    "libuuid"
-]
-
+# Minimal nixpacks.toml - just fix the npm install
 [phases.install]
-cmds = [
-    "npm install --legacy-peer-deps --no-audit --no-fund",
-    "mkdir -p temp logs"
-]
-
-[phases.build]
-cmds = [
-    "echo 'IMPERIUM VAULT System - Ray Dalio AI + Cambodia Lending Fund'",
-    "echo 'Build completed successfully'"
-]
-
-[start]
-cmd = "node index.js"
+cmds = ["npm install --legacy-peer-deps --no-audit --no-fund"]
 
 [variables]
 NODE_ENV = "production"
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = "true"
-PUPPETEER_EXECUTABLE_PATH = "/usr/bin/chromium"
