--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@types/node": "^20.11.17",
         "dotenv": "^16.4.5",
         "node-telegram-bot-api": "^0.61.0",
         "openai": "^4.38.1",
@@ -83,7 +82,7 @@
         "socket.io-client": "^4.7.4",
         "bull": "^4.12.2",
         "agenda": "^5.0.0",
-        "puppeteer": "^22.0.0",
+        "puppeteer-core": "^22.0.0",
         "cheerio": "^1.0.0-rc.12",
         "csv-parser": "^3.0.0",
         "csv-writer": "^1.6.0",
@@ -94,10 +93,7 @@
         "ml-regression": "^6.1.0",
         "simple-statistics": "^7.8.3",
         "technical-indicators": "^3.1.0",
-        "ta-lib": "^0.4.10",
-        "tulind": "^0.8.19",
         "finance": "^0.3.0",
-        "quantlib": "^0.1.2",
         "trading-signals": "^5.0.5",
         "alphavantage": "^1.2.0",
         "yahoo-finance2": "^2.11.3",
@@ -107,9 +103,7 @@
         "newsapi": "^2.4.1",
         "polygon": "^2.0.1",
         "finnhub": "^1.2.18",
-        "alpha-vantage": "^1.0.1",
         "twelve-data": "^1.4.14",
-        "tradingview-charting-library": "^26.002.0",
         "ccxt": "^4.2.25",
         "binance-api-node": "^0.12.6",
         "okx-api": "^5.3.0",
@@ -128,19 +122,15 @@
         "twilio": "^4.20.1",
         "slack-node": "^0.1.8",
         "discord.js": "^14.14.1",
-        "whatsapp-web.js": "^1.23.0",
         "qrcode": "^1.5.3",
         "jimp": "^0.22.10",
-        "canvas": "^2.11.2",
-        "chart.js": "^4.4.1",
+        "chart.js": "^3.9.1",
         "chartjs-node-canvas": "^4.1.6",
         "d3": "^7.8.5",
         "plotly.js": "^2.29.1",
         "highcharts": "^11.3.0",
         "tradingview-widgets": "^1.0.12",
         "crypto-js": "^4.2.0",
-        "bcrypt": "^5.1.1",
-        "argon2": "^0.40.1",
         "speakeasy": "^2.0.0",
         "otplib": "^12.0.1",
         "google-auth-library": "^9.6.3",
@@ -170,6 +160,7 @@
         "node-clinic": "^13.0.0"
     },
     "devDependencies": {
+        "@types/node": "^20.11.17",
         "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.29.1",
@@ -192,7 +183,6 @@
         "jsdoc": "^4.0.2",
         "typedoc": "^0.25.7",
         "@types/express": "^4.17.21",
-        "@types/node": "^20.11.17",
         "@types/ws": "^8.5.10",
         "@types/jest": "^29.5.11",
         "typescript": "^5.3.3",
