--- a/package.json
+++ b/package.json
@@ -4,45 +4,14 @@
     "private": true,
     "description": "Ray Dalio Enhanced GPT-4o System - Institutional-grade market analysis with Bridgewater Associates methodology, real-time regime detection, and advanced risk management",
     "main": "index.js",
-    "keywords": [
-        "ray-dalio",
-        "bridgewater-associates", 
-        "economic-regime",
-        "institutional-trading",
-        "risk-management",
-        "gpt-4o",
-        "omni",
-        "telegram",
-        "api",
-        "multimodal",
-        "128k-context",
-        "market-data",
-        "portfolio-management",
-        "algorithmic-trading",
-        "quantitative-finance"
-    ],
     "scripts": {
         "start": "node index.js",
         "bot": "node index.js",
-        "webhook": "node webhook-bot.js",
-        "dev": "NODE_ENV=development node index.js",
-        "test": "npm run test:connection && npm run test:database && npm run test:apis",
-        "test:connection": "node tests/test-connections.js",
-        "test:database": "node tests/test-database.js", 
-        "test:apis": "node tests/test-apis.js",
-        "setup": "node scripts/setup-database.js",
-        "cleanup": "node scripts/cleanup-old-data.js",
-        "backup": "node scripts/backup-database.js",
-        "analyze": "node scripts/analyze-performance.js",
-        "deploy": "npm run setup && npm start",
-        "lint": "eslint . --ext .js",
-        "format": "prettier --write .",
-        "docs": "jsdoc -c jsdoc.conf.json"
+        "dev": "NODE_ENV=development node index.js"
     },
     "author": {
         "name": "Sum Chenda",
-        "email": "contact@imperiumvault.com",
-        "url": "https://imperiumvault.com"
+        "email": "contact@imperiumvault.com"
     },
     "license": "MIT",
     "dependencies": {
@@ -73,316 +42,64 @@
         "rate-limiter-flexible": "^5.0.3",
         "multer": "^1.4.5-lts.1",
         "sharp": "^0.33.2",
-        "ffmpeg-static": "^5.2.0",
-        "fluent-ffmpeg": "^2.1.2",
         "node-cache": "^5.1.2",
         "redis": "^4.6.13",
-        "ioredis": "^5.3.2",
         "ws": "^8.16.0",
         "socket.io": "^4.7.4",
-        "socket.io-client": "^4.7.4",
-        "bull": "^4.12.2",
-        "agenda": "^5.0.0",
-        "puppeteer": "^22.0.0",
         "cheerio": "^1.0.0-rc.12",
         "csv-parser": "^3.0.0",
-        "csv-writer": "^1.6.0",
         "xlsx": "^0.18.5",
         "papaparse": "^5.4.1",
         "fast-csv": "^5.0.1",
         "mathjs": "^12.3.2",
-        "ml-regression": "^6.1.0",
         "simple-statistics": "^7.8.3",
         "technical-indicators": "^3.1.0",
-        "ta-lib": "^0.4.10",
-        "tulind": "^0.8.19",
-        "finance": "^0.3.0",
-        "quantlib": "^0.1.2",
         "trading-signals": "^5.0.5",
         "alphavantage": "^1.2.0",
         "yahoo-finance2": "^2.11.3",
-        "coinmarketcap-api": "^3.1.1",
         "coingecko-api": "^1.0.10",
-        "fred-api": "^1.0.2",
         "newsapi": "^2.4.1",
         "polygon": "^2.0.1",
         "finnhub": "^1.2.18",
-        "alpha-vantage": "^1.0.1",
         "twelve-data": "^1.4.14",
-        "tradingview-charting-library": "^26.002.0",
         "ccxt": "^4.2.25",
         "binance-api-node": "^0.12.6",
-        "okx-api": "^5.3.0",
         "bybit-api": "^3.10.15",
-        "kraken-api": "^2.2.2",
         "coinbase-pro": "^0.12.1",
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
         "express-session": "^1.17.3",
-        "connect-redis": "^7.1.1",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
-        "passport-google-oauth20": "^2.0.0",
         "nodemailer": "^6.9.8",
-        "nodemailer-sendgrid-transport": "^0.2.0",
         "twilio": "^4.20.1",
-        "slack-node": "^0.1.8",
-        "discord.js": "^14.14.1",
-        "whatsapp-web.js": "^1.23.0",
         "qrcode": "^1.5.3",
         "jimp": "^0.22.10",
-        "canvas": "^2.11.2",
         "chart.js": "^4.4.1",
-        "chartjs-node-canvas": "^4.1.6",
         "d3": "^7.8.5",
         "plotly.js": "^2.29.1",
-        "highcharts": "^11.3.0",
         "tradingview-widgets": "^1.0.12",
         "crypto-js": "^4.2.0",
         "bcrypt": "^5.1.1",
-        "argon2": "^0.40.1",
         "speakeasy": "^2.0.0",
-        "otplib": "^12.0.1",
         "google-auth-library": "^9.6.3",
         "googleapis": "^133.0.0",
         "aws-sdk": "^2.1548.0",
-        "@aws-sdk/client-s3": "^3.509.0",
-        "@aws-sdk/client-dynamodb": "^3.509.0",
-        "@aws-sdk/client-ses": "^3.509.0",
-        "@azure/storage-blob": "^12.17.0",
-        "@azure/cosmos": "^4.0.0",
         "mongodb": "^6.3.0",
         "mongoose": "^8.1.1",
-        "cassandra-driver": "^4.7.2",
-        "influxdb": "^5.9.3",
-        "elasticsearch": "^16.7.3",
-        "@elastic/elasticsearch": "^8.12.2",
-        "prometheus-api-metrics": "^3.2.2",
-        "prom-client": "^15.1.0",
-        "newrelic": "^11.11.0",
-        "dd-trace": "^4.32.0",
-        "jaeger-client": "^3.19.0",
-        "opentracing": "^0.14.7",
         "microtime": "^3.1.1",
-        "performance-now": "^2.1.0",
-        "clinic": "^13.0.0",
-        "0x": "^5.5.0",
-        "node-clinic": "^13.0.0"
-    },
-    "devDependencies": {
-        "eslint": "^8.56.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "prettier": "^3.2.5",
-        "jest": "^29.7.0",
-        "supertest": "^6.3.4",
-        "nock": "^13.5.0",
-        "sinon": "^17.0.1",
-        "chai": "^5.0.3",
-        "mocha": "^10.2.0",
-        "nyc": "^15.1.0",
-        "nodemon": "^3.0.3",
-        "concurrently": "^8.2.2",
-        "cross-env": "^7.0.3",
-        "rimraf": "^5.0.5",
-        "copyfiles": "^2.4.1",
-        "npm-run-all": "^4.1.5",
-        "jsdoc": "^4.0.2",
-        "typedoc": "^0.25.7",
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.11.17",
-        "@types/ws": "^8.5.10",
-        "@types/jest": "^29.5.11",
-        "typescript": "^5.3.3",
-        "ts-node": "^10.9.2",
-        "husky": "^8.0.3",
-        "lint-staged": "^15.2.1",
-        "commitizen": "^4.3.0",
-        "cz-conventional-changelog": "^3.3.0",
-        "semantic-release": "^23.0.0",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^9.2.6",
-        "standard-version": "^9.5.0"
+        "performance-now": "^2.1.0"
     },
     "engines": {
         "node": ">=18.0.0",
         "npm": ">=8.0.0"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sumchenda/imperium-vault-system.git"
-    },
-    "bugs": {
-        "url": "https://github.com/sumchenda/imperium-vault-system/issues"
-    },
-    "homepage": "https://imperiumvaultsystem-production.up.railway.app",
     "config": {
         "model": "gpt-4o",
         "context_window": "128000",
         "max_tokens": "16384",
         "multimodal": true,
-        "release_date": "2024-05-13",
         "ray_dalio_enhanced": true,
-        "institutional_grade": true,
-        "bridgewater_methodology": true
-    },
-    "rayDalio": {
-        "principles": [
-            "Diversification is the only free lunch",
-            "Don't fight the Fed",
-            "Cash is trash (in inflationary environments)",
-            "Think like a machine",
-            "Understand the machine"
-        ],
-        "features": {
-            "economicRegimeDetection": true,
-            "marketCycleAnalysis": true,
-            "allWeatherPortfolio": true,
-            "riskParityAllocation": true,
-            "correlationAnalysis": true,
-            "systematicOpportunities": true,
-            "institutionalRiskManagement": true,
-            "bridgewaterStyleReporting": true
-        },
-        "dataProviders": {
-            "fred": "Federal Reserve Economic Data",
-            "alphaVantage": "Real-time market data",
-            "coinGeckoPro": "Enhanced cryptocurrency data",
-            "newsAPI": "Financial news analysis",
-            "metaAPI": "Live trading integration"
-        },
-        "riskManagement": {
-            "maxRiskPerTrade": "2%",
-            "maxPortfolioRisk": "6%",
-            "maxCorrelationExposure": "15%",
-            "volatilityAdjustment": true,
-            "regimeAwarePositioning": true
-        }
-    },
-    "performance": {
-        "monitoring": {
-            "responseTime": true,
-            "memoryUsage": true,
-            "apiLatency": true,
-            "databasePerformance": true,
-            "tradingSystemUptime": true
-        },
-        "optimization": {
-            "caching": "Redis + Node-Cache",
-            "compression": "gzip",
-            "clustering": "PM2 ready",
-            "loadBalancing": "Railway compatible",
-            "cdn": "Static asset optimization"
-        }
-    },
-    "security": {
-        "authentication": "JWT + bcrypt",
-        "rateLimiting": "Express rate limit",
-        "inputValidation": "Express validator",
-        "encryption": "Crypto-js + Argon2",
-        "headers": "Helmet.js",
-        "cors": "Configurable CORS"
-    },
-    "deployment": {
-        "platform": "Railway",
-        "database": "PostgreSQL",
-        "caching": "Redis (optional)",
-        "monitoring": "Built-in analytics",
-        "logging": "Winston + Daily rotate",
-        "healthChecks": "Express endpoints"
-    },
-    "testing": {
-        "unit": "Jest + Mocha",
-        "integration": "Supertest",
-        "mocking": "Nock + Sinon",
-        "coverage": "NYC",
-        "performance": "Clinic.js",
-        "api": "Custom test suites"
-    },
-    "documentation": {
-        "api": "JSDoc + TypeDoc",
-        "readme": "Comprehensive guide",
-        "deployment": "Railway specific",
-        "trading": "Risk management docs",
-        "rayDalio": "Methodology explanation"
-    },
-    "lint-staged": {
-        "*.js": [
-            "eslint --fix",
-            "prettier --write",
-            "git add"
-        ],
-        "*.json": [
-            "prettier --write",
-            "git add"
-        ],
-        "*.md": [
-            "prettier --write",
-            "git add"
-        ]
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged",
-            "commit-msg": "commitizen --cz"
-        }
-    },
-    "jest": {
-        "testEnvironment": "node",
-        "collectCoverage": true,
-        "coverageDirectory": "coverage",
-        "coverageReporters": [
-            "text",
-            "lcov",
-            "html"
-        ],
-        "testMatch": [
-            "**/tests/**/*.test.js",
-            "**/tests/**/*.spec.js"
-        ]
-    },
-    "eslintConfig": {
-        "extends": [
-            "airbnb-base",
-            "prettier"
-        ],
-        "plugins": [
-            "prettier"
-        ],
-        "rules": {
-            "prettier/prettier": "error",
-            "no-console": "off",
-            "no-unused-vars": "warn"
-        },
-        "env": {
-            "node": true,
-            "es2021": true,
-            "jest": true
-        }
-    },
-    "prettier": {
-        "semi": true,
-        "singleQuote": true,
-        "tabWidth": 4,
-        "trailingComma": "es5",
-        "printWidth": 100,
-        "bracketSpacing": true,
-        "arrowParens": "avoid"
-    },
-    "nodemonConfig": {
-        "watch": [
-            "."
-        ],
-        "ext": "js,json",
-        "ignore": [
-            "node_modules/",
-            "tests/",
-            "coverage/",
-            "logs/",
-            "temp/"
-        ],
-        "delay": 2000
+        "institutional_grade": true
     }
 }
