--- a/package.json
+++ b/package.json
@@ -59,13 +59,11 @@
         "yahoo-finance2": "^2.11.3",
         "coingecko-api": "^1.0.10",
         "newsapi": "^2.4.1",
-        "polygon": "^2.0.1",
-        "finnhub": "^1.2.18",
-        "twelve-data": "^1.4.14",
+
         "ccxt": "^4.2.25",
         "binance-api-node": "^0.12.6",
-        "bybit-api": "^3.10.15",
-        "coinbase-pro": "^0.12.1",
+        "bybit-api": "^4.2.1",
+        "coinbase": "^10.0.2",
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
         "express-session": "^1.17.3",
@@ -77,8 +75,7 @@
         "jimp": "^0.22.10",
         "chart.js": "^4.4.1",
         "d3": "^7.8.5",
-        "plotly.js": "^2.29.1",
-        "tradingview-widgets": "^1.0.12",
+
         "crypto-js": "^4.2.0",
         "bcrypt": "^5.1.1",
         "speakeasy": "^2.0.0",
