--- a/package.json
+++ b/package.json
@@ -1,102 +1,41 @@
 {
-    "name": "imperium-vault-system-ray-dalio",
-    "version": "3.0.0",
+    "name": "gpt-4o-omni-telegram-api",
+    "version": "2.0.0",
     "private": true,
-    "description": "Ray Dalio Enhanced GPT-4o System - Institutional-grade market analysis with Bridgewater Associates methodology, real-time regime detection, and advanced risk management",
+    "description": "Direct OpenAI GPT-4o access via Telegram - Authentic AI with multimodal capabilities and real market data",
     "main": "index.js",
+    "keywords": ["gpt-4o", "omni", "telegram", "api", "multimodal", "128k-context"],
     "scripts": {
         "start": "node index.js",
         "bot": "node index.js",
+        "webhook": "node webhook-bot.js",
         "dev": "NODE_ENV=development node index.js"
     },
-    "author": {
-        "name": "Sum Chenda",
-        "email": "contact@imperiumvault.com"
-    },
+    "author": "Sum Chenda",
     "license": "MIT",
     "dependencies": {
-        "@types/node": "^20.11.17",
         "dotenv": "^16.4.5",
         "node-telegram-bot-api": "^0.61.0",
         "openai": "^4.38.1",
         "express": "^4.18.2",
         "axios": "^1.6.7",
-        "pg": "^8.11.3",
-        "metaapi.cloud-sdk": "^29.2.0",
         "pdf-parse": "^1.1.1",
         "mammoth": "^1.6.0",
-        "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "compression": "^1.7.4",
-        "morgan": "^1.10.0",
-        "winston": "^3.11.0",
-        "winston-daily-rotate-file": "^4.7.1",
-        "node-cron": "^3.0.3",
-        "moment": "^2.30.1",
-        "moment-timezone": "^0.5.45",
-        "lodash": "^4.17.21",
-        "uuid": "^9.0.1",
-        "validator": "^13.11.0",
-        "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
-        "rate-limiter-flexible": "^5.0.3",
-        "multer": "^1.4.5-lts.1",
-        "sharp": "^0.33.2",
-        "node-cache": "^5.1.2",
-        "redis": "^4.6.13",
-        "ws": "^8.16.0",
-        "socket.io": "^4.7.4",
-        "cheerio": "^1.0.0-rc.12",
-        "csv-parser": "^3.0.0",
-        "xlsx": "^0.18.5",
-        "papaparse": "^5.4.1",
-        "fast-csv": "^5.0.1",
-        "mathjs": "^12.3.2",
-        "simple-statistics": "^7.8.3",
-        "technical-indicators": "^3.1.0",
-        "trading-signals": "^5.0.5",
-        "alphavantage": "^1.2.0",
-        "yahoo-finance2": "^2.11.3",
-        "coingecko-api": "^1.0.10",
-        "newsapi": "^2.4.1",
-
-        "ccxt": "^4.2.25",
-        "binance-api-node": "^0.12.6",
-        "bybit-api": "^4.2.1",
-        "coinbase": "^10.0.2",
-        "express-rate-limit": "^7.1.5",
-        "express-validator": "^7.0.1",
-        "express-session": "^1.17.3",
-        "passport": "^0.7.0",
-        "passport-local": "^1.0.0",
-        "nodemailer": "^6.9.8",
-        "twilio": "^4.20.1",
-        "qrcode": "^1.5.3",
-        "jimp": "^0.22.10",
-        "chart.js": "^4.4.1",
-        "d3": "^7.8.5",
-
-        "crypto-js": "^4.2.0",
-        "bcrypt": "^5.1.1",
-        "speakeasy": "^2.0.0",
-        "google-auth-library": "^9.6.3",
-        "googleapis": "^133.0.0",
-        "aws-sdk": "^2.1548.0",
-        "mongodb": "^6.3.0",
-        "mongoose": "^8.1.1",
-        "microtime": "^3.1.1",
-        "performance-now": "^2.1.0"
+        "pg": "^8.11.3",
+        "metaapi.cloud-sdk": "^29.2.0"
     },
     "engines": {
-        "node": ">=18.0.0",
-        "npm": ">=8.0.0"
+        "node": ">=18.0.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "Railway deployment: imperiumvaultsystem-production.up.railway.app"
     },
     "config": {
         "model": "gpt-4o",
         "context_window": "128000",
-        "max_tokens": "16384",
+        "max_tokens": "4096",
         "multimodal": true,
-        "ray_dalio_enhanced": true,
-        "institutional_grade": true
+        "release_date": "2024-05-13"
     }
 }
