--- a/package.json
+++ b/package.json
@@ -4,37 +4,10 @@
     "private": true,
     "description": "Ray Dalio Enhanced GPT-4o System - Institutional-grade market analysis with Bridgewater Associates methodology, real-time regime detection, and advanced risk management",
     "main": "index.js",
-    "keywords": [
-        "ray-dalio",
-        "bridgewater-associates", 
-        "economic-regime",
-        "institutional-trading",
-        "risk-management",
-        "gpt-4o",
-        "omni",
-        "telegram",
-        "api",
-        "multimodal",
-        "128k-context",
-        "market-data",
-        "portfolio-management",
-        "algorithmic-trading",
-        "quantitative-finance"
-    ],
     "scripts": {
         "start": "node index.js",
         "bot": "node index.js",
-        "webhook": "node webhook-bot.js",
-        "dev": "NODE_ENV=development node index.js",
-        "test": "npm run test:connection && npm run test:database && npm run test:apis",
-        "test:connection": "node tests/test-connections.js",
-        "test:database": "node tests/test-database.js", 
-        "test:apis": "node tests/test-apis.js",
-        "setup": "node scripts/setup-database.js",
-        "cleanup": "node scripts/cleanup-old-data.js",
-        "backup": "node scripts/backup-database.js",
-        "analyze": "node scripts/analyze-performance.js",
-        "deploy": "npm run setup && npm start"
+        "dev": "NODE_ENV=development node index.js"
     },
     "author": {
         "name": "Sum Chenda",
@@ -89,13 +62,9 @@
         "mathjs": "^12.3.2",
         "ml-regression": "^6.1.0",
         "simple-statistics": "^7.8.3",
-        "technical-indicators": "^3.1.0",
-        "finance": "^0.3.0",
-        "trading-signals": "^5.0.5",
         "yahoo-finance2": "^2.11.3",
         "coinmarketcap-api": "^3.1.1",
         "coingecko-api": "^1.0.10",
-        "fred-api": "^1.0.2",
         "newsapi": "^2.4.1",
         "polygon": "^2.0.1",
         "finnhub": "^1.2.18",
@@ -105,7 +74,6 @@
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
         "express-session": "^1.17.3",
-        "connect-redis": "^7.1.1",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "passport-google-oauth20": "^2.0.0",
@@ -144,61 +112,15 @@
         "microtime": "^3.1.1",
         "performance-now": "^2.1.0"
     },
-    "devDependencies": {
-        "@types/node": "^20.11.17",
-        "eslint": "^8.56.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "prettier": "^3.2.5",
-        "jest": "^29.7.0",
-        "supertest": "^6.3.4",
-        "nock": "^13.5.0",
-        "sinon": "^17.0.1",
-        "chai": "^5.0.3",
-        "mocha": "^10.2.0",
-        "nyc": "^15.1.0",
-        "nodemon": "^3.0.3",
-        "concurrently": "^8.2.2",
-        "cross-env": "^7.0.3",
-        "rimraf": "^5.0.5",
-        "copyfiles": "^2.4.1",
-        "npm-run-all": "^4.1.5",
-        "jsdoc": "^4.0.2",
-        "typedoc": "^0.25.7",
-        "@types/express": "^4.17.21",
-        "@types/ws": "^8.5.10",
-        "@types/jest": "^29.5.11",
-        "typescript": "^5.3.3",
-        "ts-node": "^10.9.2",
-        "husky": "^8.0.3",
-        "lint-staged": "^15.2.1",
-        "commitizen": "^4.3.0",
-        "cz-conventional-changelog": "^3.3.0",
-        "semantic-release": "^23.0.0",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^9.2.6",
-        "standard-version": "^9.5.0"
-    },
     "engines": {
         "node": ">=18.0.0",
         "npm": ">=8.0.0"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sumchenda/imperium-vault-system.git"
-    },
-    "bugs": {
-        "url": "https://github.com/sumchenda/imperium-vault-system/issues"
-    },
-    "homepage": "https://imperiumvaultsystem-production.up.railway.app",
     "config": {
         "model": "gpt-4o",
         "context_window": "128000",
         "max_tokens": "16384",
         "multimodal": true,
-        "release_date": "2024-05-13",
         "ray_dalio_enhanced": true,
         "institutional_grade": true,
         "bridgewater_methodology": true
@@ -223,7 +145,6 @@
         },
         "dataProviders": {
             "fred": "Federal Reserve Economic Data",
-            "alphaVantage": "Real-time market data",
             "coinGeckoPro": "Enhanced cryptocurrency data",
             "newsAPI": "Financial news analysis",
             "metaAPI": "Live trading integration"
