--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
     "name": "imperium-vault-system-ray-dalio",
     "version": "3.0.0",
     "private": true,
-    "description": "Ray Dalio Enhanced GPT-4o System - Institutional-grade market analysis with Bridgewater Associates methodology, real-time regime detection, and advanced risk management",
+    "description": "Ray Dalio Enhanced GPT-4o System - Institutional-grade market analysis",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "bot": "node index.js",
-        "dev": "NODE_ENV=development node index.js"
+        "start": "node index.js"
     },
     "author": {
         "name": "Sum Chenda",
-        "email": "contact@imperiumvault.com",
-        "url": "https://imperiumvault.com"
+        "email": "contact@imperiumvault.com"
     },
     "license": "MIT",
     "dependencies": {
@@ -31,7 +28,6 @@
         "morgan": "^1.10.0",
         "winston": "^3.11.0",
         "winston-daily-rotate-file": "^4.7.1",
-        "node-cron": "^3.0.3",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
         "lodash": "^4.17.21",
@@ -39,69 +35,31 @@
         "validator": "^13.11.0",
         "bcryptjs": "^2.4.3",
         "jsonwebtoken": "^9.0.2",
-        "rate-limiter-flexible": "^5.0.3",
         "multer": "^1.4.5-lts.1",
         "sharp": "^0.33.2",
         "node-cache": "^5.1.2",
-        "redis": "^4.6.13",
-        "ioredis": "^5.3.2",
-        "ws": "^8.16.0",
-        "socket.io": "^4.7.4",
-        "socket.io-client": "^4.7.4",
         "cheerio": "^1.0.0-rc.12",
         "csv-parser": "^3.0.0",
-        "csv-writer": "^1.6.0",
         "xlsx": "^0.18.5",
         "papaparse": "^5.4.1",
-        "fast-csv": "^5.0.1",
         "mathjs": "^12.3.2",
         "simple-statistics": "^7.8.3",
-        "yahoo-finance2": "^2.11.3",
-        "coinmarketcap-api": "^3.1.1",
         "coingecko-api": "^1.0.10",
         "newsapi": "^2.4.1",
-        "polygon": "^2.0.1",
-        "finnhub": "^1.2.18",
-        "twelve-data": "^1.4.14",
         "ccxt": "^4.2.25",
-        "binance-api-node": "^0.12.6",
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
-        "express-session": "^1.17.3",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
-        "passport-google-oauth20": "^2.0.0",
         "nodemailer": "^6.9.8",
-        "twilio": "^4.20.1",
-        "discord.js": "^14.14.1",
         "qrcode": "^1.5.3",
-        "jimp": "^0.22.10",
-        "chart.js": "^3.9.1",
-        "d3": "^7.8.5",
-        "highcharts": "^11.3.0",
         "crypto-js": "^4.2.0",
-        "speakeasy": "^2.0.0",
-        "otplib": "^12.0.1",
-        "google-auth-library": "^9.6.3",
         "googleapis": "^133.0.0",
-        "mongodb": "^6.3.0",
-        "mongoose": "^8.1.1",
-        "prom-client": "^14.2.0",
-        "microtime": "^3.1.1",
-        "performance-now": "^2.1.0"
+        "prom-client": "^14.2.0"
     },
     "engines": {
         "node": ">=18.0.0",
         "npm": ">=8.0.0"
-    },
-    "config": {
-        "model": "gpt-4o",
-        "context_window": "128000",
-        "max_tokens": "16384",
-        "multimodal": true,
-        "ray_dalio_enhanced": true,
-        "institutional_grade": true,
-        "bridgewater_methodology": true
     },
     "rayDalio": {
         "principles": [
@@ -122,8 +80,6 @@
             "bridgewaterStyleReporting": true
         },
         "dataProviders": {
-            "fred": "Federal Reserve Economic Data",
-            "coinGeckoPro": "Enhanced cryptocurrency data",
             "newsAPI": "Financial news analysis",
             "metaAPI": "Live trading integration"
         },
