--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "name": "imperium-vault-system-strategic-dual-command",
-    "version": "4.0.0",
+    "version": "4.1.0",
     "private": true,
-    "description": "Strategic Dual Command System - GPT-4o + Claude AI institutional warfare capabilities",
+    "description": "Strategic Dual Command System - GPT-4o + Claude Opus 4.1 institutional intelligence capabilities",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "node --watch index.js",
+        "test": "node test/health-check.js",
+        "claude-test": "node test/claude-test.js",
+        "gpt-test": "node test/gpt-test.js"
     },
     "author": {
         "name": "Sum Chenda",
@@ -15,48 +19,48 @@
     "dependencies": {
         "dotenv": "^16.4.5",
         "node-telegram-bot-api": "^0.61.0",
-        "openai": "^4.38.1",
-        "@anthropic-ai/sdk": "^0.24.3",
-        "express": "^4.18.2",
-        "axios": "^1.6.7",
-        "pg": "^8.11.3",
+        "openai": "^4.67.3",
+        "@anthropic-ai/sdk": "^0.29.0",
+        "express": "^4.19.2",
+        "axios": "^1.7.7",
+        "pg": "^8.12.0",
         "metaapi.cloud-sdk": "^29.2.0",
         "pdf-parse": "^1.1.1",
-        "mammoth": "^1.6.0",
+        "mammoth": "^1.8.0",
         "cors": "^2.8.5",
         "helmet": "^7.1.0",
         "compression": "^1.7.4",
         "morgan": "^1.10.0",
-        "winston": "^3.11.0",
-        "winston-daily-rotate-file": "^4.7.1",
+        "winston": "^3.14.2",
+        "winston-daily-rotate-file": "^5.0.0",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
         "lodash": "^4.17.21",
-        "uuid": "^9.0.1",
-        "validator": "^13.11.0",
+        "uuid": "^10.0.0",
+        "validator": "^13.12.0",
         "bcryptjs": "^2.4.3",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
-        "sharp": "^0.33.2",
+        "sharp": "^0.33.5",
         "node-cache": "^5.1.2",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "^1.0.0",
         "csv-parser": "^3.0.0",
         "xlsx": "^0.18.5",
         "papaparse": "^5.4.1",
-        "mathjs": "^12.3.2",
+        "mathjs": "^13.2.0",
         "simple-statistics": "^7.8.3",
         "coingecko-api": "^1.0.10",
         "newsapi": "^2.4.1",
-        "ccxt": "^4.2.25",
-        "express-rate-limit": "^7.1.5",
-        "express-validator": "^7.0.1",
+        "ccxt": "^4.4.19",
+        "express-rate-limit": "^7.4.1",
+        "express-validator": "^7.2.0",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
-        "nodemailer": "^6.9.8",
-        "qrcode": "^1.5.3",
+        "nodemailer": "^6.9.15",
+        "qrcode": "^1.5.4",
         "crypto-js": "^4.2.0",
-        "googleapis": "^133.0.0",
-        "prom-client": "^14.2.0"
+        "googleapis": "^144.0.0",
+        "prom-client": "^15.1.3"
     },
     "engines": {
         "node": ">=18.0.0",
@@ -66,33 +70,69 @@
         "aiCommanders": {
             "gptStrategicCommander": {
                 "model": "gpt-4o",
+                "apiModel": "gpt-4o",
+                "latestVersion": "gpt-4o-2024-11-20",
                 "specialties": [
-                    "Multimodal intelligence",
-                    "Institutional analysis", 
+                    "Multimodal intelligence (text, vision, audio)",
+                    "Real-time financial analysis", 
                     "Cambodia fund expertise",
-                    "Voice/image/document processing"
+                    "Voice/image/document processing",
+                    "Strategic coding and automation"
                 ],
                 "capabilities": [
                     "Strategic portfolio management",
-                    "Economic regime analysis",
-                    "Risk parity allocation",
-                    "All Weather strategies"
+                    "Economic analysis with 128K context",
+                    "Risk assessment and allocation",
+                    "Advanced vision processing",
+                    "Audio transcription and TTS",
+                    "Institutional-grade reasoning"
                 ]
             },
             "claudeIntelligenceChief": {
-                "model": "claude-sonnet-4-20250514",
+                "model": "claude-opus-4-1",
+                "apiModel": "claude-opus-4-1-20250805",
+                "latestVersion": "claude-opus-4-1-20250805",
                 "specialties": [
-                    "Real-time market intelligence",
+                    "Extended reasoning and thinking",
                     "Superior analytical reasoning",
                     "Complex multi-factor analysis",
-                    "Live economic data integration"
+                    "Advanced coding (74.5% SWE-bench)",
+                    "Live economic data integration",
+                    "Tool use during thinking"
                 ],
                 "capabilities": [
                     "Advanced scenario modeling",
-                    "Live research synthesis",
+                    "Long-horizon task execution",
                     "Current event analysis", 
-                    "Dynamic risk assessment"
+                    "Dynamic risk assessment",
+                    "Institutional research synthesis",
+                    "Agentic task completion",
+                    "Extended thinking with tool use"
                 ]
+            }
+        },
+        "modelVersioning": {
+            "gpt": {
+                "primary": "gpt-4o",
+                "fallback": "gpt-4o-mini",
+                "latestUpdate": "2024-11-20",
+                "contextWindow": "128K tokens",
+                "maxOutput": "16,384 tokens",
+                "pricing": {
+                    "input": "$2.50 per 1M tokens",
+                    "output": "$10.00 per 1M tokens"
+                }
+            },
+            "claude": {
+                "primary": "claude-opus-4-1-20250805",
+                "fallback": "claude-sonnet-4-20250514",
+                "latestUpdate": "2025-08-05",
+                "contextWindow": "200K tokens",
+                "maxOutput": "4,096 tokens",
+                "pricing": {
+                    "input": "$15.00 per 1M tokens",
+                    "output": "$75.00 per 1M tokens"
+                }
             }
         },
         "principles": [
@@ -102,11 +142,15 @@
             "Think like a machine",
             "Understand the machine",
             "Superior AI reasoning for strategic advantage",
-            "Live intelligence beats static knowledge"
+            "Live intelligence beats static knowledge",
+            "Extended thinking enables deeper insights"
         ],
         "features": {
             "dualCommandSystem": true,
             "smartAIRouting": true,
+            "naturalResponses": true,
+            "extendedThinking": true,
+            "toolUseDuringThinking": true,
             "realtimeIntelligence": true,
             "economicRegimeDetection": true,
             "marketCycleAnalysis": true,
@@ -118,11 +162,13 @@
             "bridgewaterStyleReporting": true,
             "multimodalProcessing": true,
             "liveMarketData": true,
-            "cambodiaFundAnalysis": true
+            "cambodiaFundAnalysis": true,
+            "agenticTaskExecution": true,
+            "advancedCodingSupport": true
         },
         "dataProviders": {
-            "openAI": "GPT-4o multimodal capabilities",
-            "anthropic": "Claude superior reasoning",
+            "openAI": "GPT-4o multimodal capabilities (text, vision, audio)",
+            "anthropic": "Claude Opus 4.1 superior reasoning with extended thinking",
             "newsAPI": "Financial news analysis",
             "metaAPI": "Live trading integration",
             "coinGecko": "Cryptocurrency data",
@@ -136,14 +182,46 @@
             "volatilityAdjustment": true,
             "regimeAwarePositioning": true,
             "dualAIValidation": true,
-            "liveRiskMonitoring": true
+            "liveRiskMonitoring": true,
+            "extendedThinkingValidation": true
         },
         "apiEndpoints": {
-            "/analyze": "GPT Strategic Commander analysis",
-            "/claude": "Claude Intelligence Chief analysis", 
+            "/analyze": "GPT-4o multimodal analysis",
+            "/claude": "Claude Opus 4.1 extended reasoning", 
             "/dual": "Dual command smart routing system",
             "/claude-health": "Claude system health monitoring",
-            "/system-status": "Complete system status overview"
+            "/gpt-health": "GPT-4o system health monitoring",
+            "/system-status": "Complete system status overview",
+            "/natural-test": "Test natural AI responses"
+        },
+        "testCommands": {
+            "healthCheck": "npm run test",
+            "claudeTest": "npm run claude-test",
+            "gptTest": "npm run gpt-test",
+            "naturalResponseTest": "node test/natural-response-test.js"
         }
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sumchenda/imperium-vault-system.git"
+    },
+    "keywords": [
+        "ai",
+        "finance",
+        "trading",
+        "gpt-4o",
+        "claude-opus-4-1",
+        "strategic-analysis",
+        "portfolio-management",
+        "cambodia-fund",
+        "dual-ai-system",
+        "institutional-intelligence",
+        "extended-thinking",
+        "multimodal-ai"
+    ],
+    "devDependencies": {
+        "nodemon": "^3.1.4",
+        "jest": "^29.7.0",
+        "eslint": "^9.11.1"
     }
 }
